core_directory/tests/fixtures/valid_no_sig/valid_1_no_lib.core
CAPI=2:
name: vendor::core:1.0.0
description: "A valid core file without library."
provider:
  name: github
  user: myuser
  repo: myrepo
  version: "0123456789abcdef0123456789abcdef01234567"