core_directory/tests/fixtures/invalid_no_sig/additional_parameters.core
CAPI=2:
name: vendor:library:core:1.0.0
description: "A core file with additional parameter."
provider:
  name: github
  user: myuser
  repo: myrepo
  version: "0123456789abcdef0123456789abcdef01234567"
additionalparameter: "not allowed"